--- a/WhereToPlay/app/src/main/res/layout/activity_main.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
 
-
-    <com.fanc.wheretoplay.view.MyViewPager
-        android:id="@+id/mvp_main"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/ll_main_tab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:background="@color/pay_reserve_list_divider_white"
-        app:layout_constraintBottom_toTopOf="@+id/ll_main_tab"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-    <!--底部选择栏-->
     <RadioGroup
+        android:layout_alignParentBottom="true"
+
         android:id="@+id/ll_main_tab"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/white"
         android:orientation="horizontal"
@@ -103,8 +86,28 @@
     </RadioGroup>
 
 
+    <com.fanc.wheretoplay.view.MyViewPager
+        android:id="@+id/mvp_main"
+        android:layout_above="@+id/ll_main_tab"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toTopOf="@+id/ll_main_tab"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
-</android.support.constraint.ConstraintLayout>
+
+    <FrameLayout
+        android:id="@+id/fragment"
+        android:layout_width="match_parent"
+        android:background="@drawable/main1"
+        android:layout_height="match_parent"></FrameLayout>
+
+
+
+
+</RelativeLayout>
 
 
 
