--- a/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail2.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_merchant_detail2.xml
@@ -454,6 +454,11 @@
         </LinearLayout>
     </ScrollView>
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:id="@+id/framelayout"
+        android:layout_height="match_parent"></FrameLayout>
+
 
 </RelativeLayout>
 
