--- a/WhereToPlay/app/src/main/res/layout/orderlistallfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/orderlistallfragment.xml
@@ -21,5 +21,29 @@
 
         <include layout="@layout/load_more"/>
     </com.fanc.wheretoplay.view.PullToRefreshLayout>
+    <RelativeLayout
+        android:id="@+id/rrrrrr"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:layout_centerInParent="true"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_centerHorizontal="true"
+
+            android:src="@drawable/nodate" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/iv"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:text="暂无相关数据" />
+    </RelativeLayout>
 
 </RelativeLayout>
