修改分享鏈接

--- a/WhereToPlay/app/src/main/res/layout/fragment_referrals.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_referrals.xml
@@ -107,6 +107,7 @@
                     android:background="@drawable/shape_invitaiton_code"
                     android:gravity="center_horizontal"
                     android:padding="@dimen/padding_5"
+                    android:editable="false"
                     android:paddingTop="@dimen/padding_5"
                     android:text="HL12"
                     android:textColor="@color/text_red"
