--- a/WhereToPlay/app/src/main/res/layout/titlebarview.xml
+++ b/WhereToPlay/app/src/main/res/layout/titlebarview.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_top_menu_bg"
     android:layout_width="match_parent"
     android:layout_height="@dimen/menu_height"
@@ -33,5 +34,17 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:id="@+id/tv_right"
+        android:gravity="center"
+        tools:text="12"
+        android:layout_below="@+id/v_statubar"
+        android:textSize="@dimen/menu_text_size"
+        android:paddingRight="16dp"
+        android:paddingLeft="16dp"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentRight="true"
+        android:layout_height="match_parent" />
 
 </RelativeLayout>
