--- a/WhereToPlay/app/src/main/res/layout/activity_detaels_order.xml
+++ b/WhereToPlay/app/src/main/res/layout/activity_detaels_order.xml
@@ -150,6 +150,36 @@
                 android:paddingTop="2dp" />
 
 
+            <LinearLayout
+                android:id="@+id/ll_refuse"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:orientation="vertical"
+                android:paddingLeft="12dp"
+                android:paddingRight="8dp">
+
+                <TextView
+
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:paddingBottom="8dp"
+                    android:paddingTop="8dp"
+                    android:text="商家拒绝说明" />
+
+                <TextView
+                    android:id="@+id/tv_refuse"
+
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="#f2f2f2f2"
+                    android:padding="8dp"
+                    android:text="12121221" />
+
+            </LinearLayout>
+
+
             <com.fanc.wheretoplay.view.OrderetailsItemView
                 android:id="@+id/oi1"
                 android:layout_width="match_parent"
@@ -349,9 +379,9 @@
             <ImageView
                 android:id="@+id/iv_qrcode"
                 android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_gravity="center"
-                android:layout_marginBottom="40dp"
-                android:layout_height="120dp" />
+                android:layout_marginBottom="40dp" />
 
 
         </LinearLayout>
