--- a/WhereToPlay/app/src/main/res/layout/fragment_signin.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_signin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -17,12 +17,14 @@
         android:paddingTop="@dimen/statubar_height">
 
 
-        <ImageView
+        <ImageButton
             android:id="@+id/ivclose"
-            android:layout_width="25dp"
-            android:layout_height="20dp"
-            android:src="@drawable/close"
+            android:padding="12dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
+            android:background="@null"
+            android:src="@drawable/close"
             app:layout_constraintLeft_toLeftOf="parent"
 
 
