--- a/WhereToPlay/app/src/main/res/layout/cancelorderfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/cancelorderfragment.xml
@@ -9,110 +9,122 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_below="@+id/tbv"
-        android:layout_margin="8dp">
 
-        <ImageView
-            android:id="@+id/iv"
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            android:layout_centerVertical="true"
-            android:scaleType="fitXY"
-            android:src="@mipmap/ic_launcher" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@+id/iv"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tv1"
-                android:drawableLeft="@drawable/icon_shangjia"
-                android:drawablePadding="8dp"
-                android:gravity="center_vertical"
-                android:textStyle="bold"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.5"
-                android:textSize="15sp" />
+                android:layout_height="120dp"
+                android:layout_below="@+id/tbv"
+                android:layout_margin="8dp">
+
+                <ImageView
+                    android:id="@+id/iv"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:layout_centerVertical="true"
+                    android:scaleType="fitXY"
+                    android:src="@mipmap/ic_launcher" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="110dp"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="8dp"
+                    android:layout_toRightOf="@+id/iv"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/tv1"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1.5"
+                        android:drawableLeft="@drawable/icon_shangjia"
+                        android:drawablePadding="8dp"
+                        android:gravity="center_vertical"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tv2"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/tv3"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+
+                    <TextView
+                        android:id="@+id/tv4"
+                        android:layout_width="match_parent"
+                        android:layout_height="0dp"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="退款金额:" />
+
+                <TextView
+                    android:id="@+id/tv_money"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text=""
+                    android:textColor="@color/dactionsheet_red" />
+            </LinearLayout>
+
 
             <TextView
-                android:id="@+id/tv2"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="0dp" />
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="取消说明:" />
+
+            <EditText
+                android:id="@+id/et_reason"
+                android:layout_width="match_parent"
+                android:layout_height="120dp"
+                android:layout_margin="8dp"
+                android:background="@drawable/shape_mine_info_sign"
+                android:gravity="top|left"
+                android:hint="请输入您取消的理由哦..."
+                android:padding="8dp" />
 
             <TextView
-                android:id="@+id/tv3"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="0dp" />
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="温馨提示:" />
 
             <TextView
-                android:id="@+id/tv4"
-                android:layout_weight="1"
                 android:layout_width="match_parent"
-                android:layout_height="0dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="8dp"
+
+                android:layout_marginRight="12dp"
+                android:text="· 商务KTV：\n        预订之日20:00之前退扣除订单金额的20%\n        预订之日20:00-21:00退扣除订单金额的50%\n        预订之日21:00后不退\n· 酒吧：\n         预订之日21:30之前退扣订单金额的20%\n         预订之日21:30-22:30退扣订单金额的50%\n         预订之日22:30后不退\n· 量贩KTV：\n        扣订单金额的20%\n· 如有对您造成不便，尽请谅解，谢谢" />
         </LinearLayout>
-
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text="退款金额:" />
-
-        <TextView
-            android:id="@+id/tv_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:text=""
-            android:textColor="@color/dactionsheet_red" />
-    </LinearLayout>
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="取消说明:" />
-
-    <EditText
-        android:id="@+id/et_reason"
-        android:layout_width="match_parent"
-        android:layout_height="120dp"
-        android:layout_margin="8dp"
-        android:background="@drawable/shape_mine_info_sign"
-        android:gravity="top|left"
-        android:hint="请输入您取消的理由哦..."
-        android:padding="8dp" />
-
-    <TextView
-        android:text="温馨提示:"
-        android:layout_margin="8dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-       android:layout_marginLeft="8dp"
-        android:layout_marginRight="12dp"
-        android:layout_width="match_parent"
-
-        android:text="· 商务KTV：20:00之前退扣订单金额的20%,20:00-21:00退扣订单金额的50%,21:00过后不退款\n· 酒吧：21:30之前退扣订单金额的20%，21:30-22:30退扣订单金额的50%, 22:30过后不退款。\n· 量贩KTV：扣订单金额的20%。\n· 如有对您造成不便，尽请谅解，谢谢。"
-        android:layout_height="wrap_content" />
-
+    </ScrollView>
 
 </LinearLayout>
