--- a/WhereToPlay/app/src/main/res/layout/fragment_search.xml
+++ b/WhereToPlay/app/src/main/res/layout/fragment_search.xml
@@ -110,9 +110,7 @@
                 android:id="@+id/tv_search_history"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_15"
-                android:layout_marginTop="@dimen/margin_15"
-                android:layout_marginRight="@dimen/margin_15"
+                android:layout_margin="@dimen/margin_15"
                 android:text="@string/no_search_history"
                 android:textColor="@color/text_black_sec"
                 android:textSize="@dimen/textsize_level2"/>
