--- a/WhereToPlay/app/src/main/res/values/styles.xml
+++ b/WhereToPlay/app/src/main/res/values/styles.xml
@@ -114,7 +114,8 @@
     <!--半透明-->
     <style name="Translucence" parent="@android:style/Theme.Translucent.NoTitleBar">
         <item name="android:windowBackground">@color/translucence_1</item>
-        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowDisablePreview">true</item>
     </style>
     <!--半透明-->
     <style name="Trans" parent="@android:style/Theme.Translucent.NoTitleBar.Fullscreen">
