--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment3.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment3.xml
@@ -25,6 +25,23 @@
         android:paddingRight="8dp">
 
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:id="@+id/iv_status"
+            android:layout_margin="8dp"
+             />
+
+        <TextView
+            android:id="@+id/tv_text"
+            android:layout_margin="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="资料审核中，请耐心等待···" />
+
+
         <TextView
             android:id="@+id/next"
             android:layout_width="match_parent"
