--- a/WhereToPlay/app/src/main/res/layout/bgirlfragment.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlfragment.xml
@@ -30,7 +30,11 @@
             android:layout_marginTop="8dp"
             android:text="从业申请"
             android:textColor="#ff333333"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
+        <View android:layout_height="1dp"
+            android:background="#33333333"
+            android:layout_width="match_parent"/>
+
 
         <TextView
             android:id="@+id/tv2"
@@ -46,7 +50,11 @@
 
             android:text="年审"
             android:textColor="#ff333333"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
+
+        <View android:layout_height="1dp"
+            android:background="#33333333"
+            android:layout_width="match_parent"/>
 
         <TextView
             android:id="@+id/tv3"
@@ -62,7 +70,7 @@
 
             android:text="补卡"
             android:textColor="#ff333333"
-            android:textSize="12sp" />
+            android:textSize="14sp" />
 
 
     </LinearLayout>
