--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2.xml
@@ -38,6 +38,8 @@
 
             <com.fanc.wheretoplay.view.SpinnerItem
                 android:layout_width="match_parent"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp"
                 android:id="@+id/spi"
                 android:layout_height="wrap_content" />
 
