--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment4.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment4.xml
@@ -32,6 +32,7 @@
 
 
         <TextView
+            android:id="@+id/tv_money"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
