--- a/WhereToPlay/app/src/main/res/layout/spinner_list_item.xml
+++ b/WhereToPlay/app/src/main/res/layout/spinner_list_item.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@+id/tv_tinted_spinner"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_gravity="left|center_vertical"
-          android:background="@color/bg"
-          android:ellipsize="marquee"
-          android:paddingBottom="@dimen/one_and_a_half_grid_unit"
-          android:paddingLeft="@dimen/three_grid_unit"
-          android:paddingTop="@dimen/one_and_a_half_grid_unit"
-          android:singleLine="true"
-          android:textColor="@color/pay_reserve_list_text"
-          android:textSize="@dimen/textsize_levelsmall"/>
+    android:id="@+id/tv_tinted_spinner"
+    android:layout_width="match_parent"
+    android:layout_height="40dp"
+
+
+    android:ellipsize="marquee"
+    android:gravity="center"
+
+    style="?android:attr/spinnerDropDownItemStyle"
+    android:textColor="#333333"
+    android:textSize="@dimen/textsize_levelsmall" />
