--- a/WhereToPlay/app/src/main/res/layout/spinneritem.xml
+++ b/WhereToPlay/app/src/main/res/layout/spinneritem.xml
@@ -3,10 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="40dp">
 
+
     <TextView
+        android:id="@+id/tv0"
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:text="※"
+        android:textColor="@color/colorPrimary" />
+
+    <TextView
+
         android:id="@+id/tv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:gravity="center"
+        android:layout_marginLeft="8dp"
+        android:paddingLeft="8dp"
+        android:paddingRight="8dp"
+        android:text="1212" />
+
+
 
     <Spinner
         android:id="@+id/sp"
