--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment5.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment5.xml
@@ -5,6 +5,7 @@
 
     <com.fanc.wheretoplay.view.TitleBarView
         android:id="@+id/tbv"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -16,39 +17,38 @@
         android:layout_below="@+id/tbv" />
 
 
-    <ScrollView
-        android:layout_below="@+id/ll"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
+        android:layout_height="wrap_content"
+
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tv"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv"
-                android:drawableTop="@drawable/success"
-                android:drawablePadding="8dp"
-                android:textColor="#ff1296db"
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-
-                android:text="支付完成" />
-
-            <include
-                layout="@layout/bgirlinfo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/tv" />
-
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:drawablePadding="8dp"
+            android:drawableTop="@drawable/success"
+            android:gravity="center"
+            android:text="支付完成"
+            android:textColor="#ff1296db" />
 
 
-    </ScrollView>
+        <TextView
+            android:id="@+id/next"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="12dp"
+            android:background="@drawable/bg_msg_bubble"
+            android:gravity="center"
+            android:padding="8dp"
+            android:text="返回首页"
+            android:textColor="@color/white" />
 
 
-
+    </LinearLayout>
 
 
 </RelativeLayout>
