--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment3.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment3.xml
@@ -19,7 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/ll"
+        android:layout_centerInParent="true"
         android:orientation="vertical"
         android:paddingLeft="8dp"
         android:paddingRight="8dp">
