--- a/WhereToPlay/app/src/main/res/layout/spinneritem.xml
+++ b/WhereToPlay/app/src/main/res/layout/spinneritem.xml
@@ -17,21 +17,29 @@
         android:id="@+id/tv"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
-        android:gravity="center"
         android:layout_marginLeft="8dp"
+        android:gravity="center"
         android:paddingLeft="8dp"
-        android:paddingRight="8dp"
-        android:text="1212" />
-
+        android:paddingRight="8dp" />
 
 
     <Spinner
         android:id="@+id/sp"
-        android:theme="@android:style/Theme.Holo.Light"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-       ></Spinner>
+        android:layout_alignParentRight="true"
+        android:background="@null"
+        android:theme="@android:style/Theme.Holo.Light"></Spinner>
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_alignLeft="@+id/sp"
+        android:layout_below="@+id/sp"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:background="#33333333" />
 
 </RelativeLayout>
