--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2.xml
@@ -36,25 +36,9 @@
                 android:padding="8dp"
                 android:text="温馨提示：打※标志为必填项" />
 
-            <com.fanc.wheretoplay.view.SpinnerItem
-                android:layout_width="match_parent"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:id="@+id/spi"
-                android:layout_height="wrap_content" />
 
-            <View
-                android:layout_below="@+id/sp"
-                android:layout_marginLeft="12dp"
-                android:layout_marginRight="12dp"
-                android:layout_width="match_parent"
-                android:background="#33333333"
-                android:layout_height="1dp"/>
-
-
-            <com.fanc.wheretoplay.view.ExtendEditView
+            <com.fanc.wheretoplay.view.ExtendTextView
                 android:id="@+id/eev1"
-                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -63,32 +47,86 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <com.fanc.wheretoplay.view.ExtendEditView
-                android:id="@+id/eev3"
+            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
+                android:layout_marginRight="12dp">
 
-            <com.fanc.wheretoplay.view.ExtendEditView
+                <TextView
+                    android:id="@+id/tv001"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:gravity="center"
+                    android:text="※"
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+
+                    android:id="@+id/tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="8dp"
+                    android:gravity="center"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="8dp"
+                    android:text="性别" />
+
+                <RadioGroup
+                    android:id="@+id/et_value"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:layout_toRightOf="@+id/tv"
+                    android:background="@null"
+                    android:gravity="center_vertical|right"
+                    android:orientation="horizontal"
+                    android:paddingRight="4dp">
+
+                    <RadioButton
+                        android:id="@+id/rb1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="true"
+                        android:text="男" />
+
+                    <RadioButton
+                        android:id="@+id/rb2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="女" />
+
+
+                </RadioGroup>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_below="@+id/et_value"
+                    android:background="#33333333" />
+
+
+            </RelativeLayout>
+
+
+            <com.fanc.wheretoplay.view.ExtendTextView
                 android:id="@+id/eev4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <com.fanc.wheretoplay.view.ExtendEditView
+            <com.fanc.wheretoplay.view.ExtendTextView
                 android:id="@+id/eev5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <com.fanc.wheretoplay.view.ExtendEditView
-                android:id="@+id/eev6"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+
 
             <com.fanc.wheretoplay.view.ExtendEditView
                 android:id="@+id/eev7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <com.fanc.wheretoplay.view.ExtendEditView
+            <com.fanc.wheretoplay.view.ExtendTextView
                 android:id="@+id/eev8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -99,7 +137,7 @@
                 android:layout_height="wrap_content" />
 
 
-            <com.fanc.wheretoplay.view.ExtendEditView
+            <com.fanc.wheretoplay.view.ExtendTextView
                 android:id="@+id/eev10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
@@ -124,15 +162,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <com.fanc.wheretoplay.view.ExtendEditView
+
+            <com.fanc.wheretoplay.view.ExtendTextView
                 android:id="@+id/eev15"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-            <com.fanc.wheretoplay.view.ExtendEditView
+
+            <com.fanc.wheretoplay.view.ExtendTextView
                 android:id="@+id/eev16"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
+
 
             <TextView
                 android:layout_width="match_parent"
@@ -142,12 +183,13 @@
             <ImageView
                 android:id="@+id/iv1"
                 android:layout_width="match_parent"
-                android:layout_marginTop="12dp"
+                android:layout_height="160dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:layout_height="160dp"
+                android:layout_marginTop="12dp"
                 android:background="@drawable/plus" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -156,27 +198,22 @@
             <ImageView
                 android:id="@+id/iv2"
                 android:layout_width="match_parent"
-                android:layout_marginTop="12dp"
+                android:layout_height="160dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:layout_height="160dp"
+                android:layout_marginTop="12dp"
                 android:background="@drawable/plus" />
+
             <ImageView
                 android:id="@+id/iv3"
                 android:layout_width="match_parent"
-                android:layout_marginTop="12dp"
+                android:layout_height="160dp"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
-                android:layout_height="160dp"
+                android:layout_marginTop="12dp"
                 android:background="@drawable/plus" />
-
-
-
-
-
-
 
 
             <TextView
