--- a/WhereToPlay/app/src/main/res/layout/extendtextview.xml
+++ b/WhereToPlay/app/src/main/res/layout/extendtextview.xml
@@ -25,11 +25,9 @@
         android:paddingRight="8dp"
         tools:text="121212" />
 
-    <EditText
+    <TextView
         android:id="@+id/et_value"
         android:paddingRight="4dp"
-
-
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_toRightOf="@+id/tv"
