--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment5.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment5.xml
@@ -21,7 +21,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
 
-        android:layout_centerInParent="true"
+        android:layout_marginTop="60dp"
+        android:layout_below="@id/ll"
         android:orientation="vertical">
 
         <TextView
