--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2.xml
@@ -183,13 +183,14 @@
 
             <ImageView
                 android:id="@+id/iv1"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/plus" />
+                android:background="@drawable/plus2" />
 
             <TextView
                 android:layout_margin="12dp"
