--- a/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2_1.xml
+++ b/WhereToPlay/app/src/main/res/layout/bgirlapplyfragment2_1.xml
@@ -37,34 +37,33 @@
                 android:text="温馨提示：打※标志为必填项" />
 
 
-
-
-            <include android:layout_width="match_parent"
+            <include
                 layout="@layout/bgirlinfo"
-                android:layout_height="wrap_content"/>
-
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_margin="12dp"
                 android:layout_height="wrap_content"
+                android:layout_margin="12dp"
                 android:text="个人照片" />
 
             <ImageView
                 android:id="@+id/iv1"
-                android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="40dp"
                 android:layout_marginRight="40dp"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/plus" />
+                android:background="@drawable/plus2" />
 
             <TextView
-                android:layout_margin="12dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="12dp"
                 android:text="证件照（正反照）" />
 
             <ImageView
